--- a/templates/base.html
+++ b/templates/base.html
@@ -29,14 +29,15 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold"
-               href="{% if user.is_authenticated and user.is_superuser %}
-                        {% url 'usuarios:admin_home' %}
-                    {% else %}
-                        {% url 'home' %}
-                    {% endif %}">
-                Eterna primavera
-            </a>
+            <a class="navbar-brand d-flex align-items-center fw-bold"
+                href="{% if user.is_authenticated and user.is_superuser %}
+                            {% url 'usuarios:admin_home' %}
+                        {% else %}
+                            {% url 'home' %}
+                        {% endif %}">
+                    <img src="{% static 'img/logoEterna.png' %}" alt="Logo" width="40" height="40" class="me-2">
+                    Eterna Primavera
+                </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
